-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.9
-
None
-
-
76962609d04a5c63c43fda4073f19646b7ad150f (qt/qtbase/5.12)
I am upgrading a runtime from Qt5.12.1 to Qt5.12.9 for a Linux ARM platform.
With the exact same options than with Qt5.12.1, Qt5.12.9 does not build anymore. I get this error:
compiling kernel/qwindow.cpp kernel/qwindow.cpp: In member function ‘QPoint QWindow::mapToGlobal(const QPoint&) const’: kernel/qwindow.cpp:2553:16: error: ‘mapPositionToGlobal’ is not a member of ‘QHighDpiScaling’ return QHighDpiScaling::mapPositionToGlobal(pos, d->globalPosition(), this); ^ kernel/qwindow.cpp: In member function ‘QPoint QWindow::mapFromGlobal(const QPoint&) const’: kernel/qwindow.cpp:2577:16: error: ‘mapPositionFromGlobal’ is not a member of ‘QHighDpiScaling’ return QHighDpiScaling::mapPositionFromGlobal(pos, d->globalPosition(), this); ^ Makefile:18636: recipe for target '.obj/qwindow.o' failed
It seems the problem was here at least since 5.12.6: https://qtlite.com/v5.12.6/highdpiscaling/20191201010940/
For Gerrit Dashboard: QTBUG-87659 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
319154,3 | Fix gui build without feature.highdpiscaling | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |