Fix gui build without feature.highdpiscaling

(cherry picked from commit b75e6e00b7c41b46179b69b0f1bcfc8d497cb59b)
Change-Id: Ic206cb6fa1b9fae1db9923ef6596852e93b3cbe5
Fixes: QTBUG-87659
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>